--- a/package.json
+++ b/package.json
@@ -13,10 +13,99 @@
   "author": "Yarn Contributors",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "lodash": "^4.16.2"
+    "lodash": "^4.16.2",
+    "@babel/polyfill": "^7.7.0",
+    "@contentful/rich-text-react-renderer": "^13.4.0",
+    "@n8tb1t/use-scroll-position": "^1.0.47",
+    "@next/bundle-analyzer": "^9.4.0",
+    "@segment/snippet": "^4.4.0",
+    "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-source-maps": "0.0.4-canary.1",
+    "axios": "^0.19.0",
+    "body-scroll-lock": "^2.6.4",
+    "cacheable-response": "^1.7.3",
+    "classlist-polyfill": "^1.2.0",
+    "classnames": "^2.2.6",
+    "contentful": "^7.11.3",
+    "cookie-parser": "^1.4.4",
+    "core-js": "^3.6.4",
+    "dotenv-webpack": "^1.7.0",
+    "enzyme-to-json": "^3.5.0",
+    "express": "^4.17.1",
+    "intersection-observer": "^0.7.0",
+    "isomorphic-unfetch": "^3.0.0",
+    "jest-next-dynamic": "^1.0.1",
+    "next": "9.3.6",
+    "next-compose-plugins": "^2.2.0",
+    "next-redux-wrapper": "^4.0.1",
+    "next-routes": "^1.4.2",
+    "node-sass": "^4.12.0",
+    "picturefill": "^3.0.3",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-device-detect": "^1.14.0",
+    "react-dom": "^16.13.1",
+    "react-html-parser": "^2.0.2",
+    "react-inline-transition-group": "^2.2.1",
+    "react-lazyload": "^2.6.2",
+    "react-onclickoutside": "^6.9.0",
+    "react-photoswipe": "^1.3.0",
+    "react-redux": "^7.1.1",
+    "react-remove-scroll": "^2.0.4",
+    "react-scripts": "^3.1.1",
+    "react-shadow-root": "^5.0.3",
+    "react-slick": "^0.25.2",
+    "react-svg-loader": "^3.0.3",
+    "react-swipeable": "^5.5.1",
+    "react-transition-group": "^4.3.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "rollbar": "^2.14.4",
+    "sass-loader": "^8.0.0",
+    "sass-resources-loader": "^2.0.1",
+    "styled-jsx": "latest",
+    "styled-jsx-plugin-sass": "^1.0.0",
+    "terser-webpack-plugin": "^2.1.0",
+    "uniqid": "^5.0.3",
+    "use-debounce": "^3.3.0",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
-    "jest-cli": "15.1.1"
+    "jest-cli": "15.1.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-console": "^1.2.1",
+    "@storybook/addon-info": "^5.2.1",
+    "@storybook/addon-knobs": "5.2.1",
+    "@storybook/addon-links": "^5.2.1",
+    "@storybook/addon-options": "^5.2.1",
+    "@storybook/addon-storysource": "^5.2.1",
+    "@storybook/addons": "^5.2.1",
+    "@storybook/channels": "^5.2.1",
+    "@storybook/client-api": "^5.2.1",
+    "@storybook/core": "^5.2.1",
+    "@storybook/react": "^5.2.1",
+    "@storybook/theming": "^5.2.1",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-transform-dynamic-import": "^2.1.0",
+    "compression": "^1.7.4",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react-hooks": "^4.0.6",
+    "jest": "^24.9.0",
+    "jest-css-modules": "^2.1.0",
+    "jest-environment-jsdom": "^25.1.0",
+    "jest-environment-jsdom-global": "^1.2.0",
+    "prettier": "^1.18.2",
+    "redux-mock-store": "^1.5.3",
+    "standard": "^14.3.0",
+    "styled-jsx-css-loader": "^0.3.0"
   },
   "jest": {
     "testEnvironment": "node"
