--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     runtime-versions:
       nodejs: 12
     commands:
-      #- aws codeartifact login --tool npm --domain zechak --repository reactify-zk # --region eu-central-1
+      - aws codeartifact login --tool npm --domain zechak --repository reactify-zk # --region eu-central-1
       - START=$(date +%s)
       - yarn install
       - END=$(date +%s)
